--- a/FrontEnd/projects/sfm/src/app/Admin/Components/complain-request/complain-request.component.html
+++ b/FrontEnd/projects/sfm/src/app/Admin/Components/complain-request/complain-request.component.html
@@ -1,1 +1,51 @@
-<p>complain-request works!</p>
+<div class="container-fluid py-4">
+    <div class="card" style="width: 100%;">
+        <div class="card-body" style="align-items: left;color: darkgray;">
+            Complain Report
+        </div>
+    </div>
+    <br>
+    <div class="card">
+        <div class="card-body">
+            <div class="ms-md-auto pe-md-3 d-flex align-items-center justify-content-end">
+                <div class="input-group" style="width: 300px;">
+                   
+                    <input type="text" class="form-control" placeholder="Type here...">
+                    <span class="input-group-text text-body"><i class="fas fa-search" aria-hidden="true"></i></span>
+                </div>
+            </div>          
+            <table class="table table-responsive">
+                <thead>
+                    <th>S.No</th>
+                    <th>Customer Name</th>
+                    <th>Block Number</th>
+                    <th>House Number</th>
+                    <th>Complain Message</th>
+                    <th>Date</th>
+                    <th>Accept</th>
+                    <th>Pending</th>
+                    <th>Reject</th>
+                </thead>
+                <tbody style="text-align: center;">
+                    <tr>
+                        <td>1</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td><button class="btn btn-success">Accept</button></td>
+                        <td><button class="btn btn-info">Pending</button></td>
+                        <td><button class="btn btn-danger">Reject</button></td>
+                    </tr>
+                    <tr>
+                        <td colspan="10" align="center">No data available in table</td>
+                    </tr>
+                    
+                </tbody>
+               
+            </table>
+        </div>
+    </div>
+    
+</div>
