--- a/FrontEnd/projects/sfm/src/app/Admin/Components/on-boarding/on-boarding.component.html
+++ b/FrontEnd/projects/sfm/src/app/Admin/Components/on-boarding/on-boarding.component.html
@@ -1,1 +1,237 @@
-<p>on-boarding works!</p>
+<div class="container-fluid py-4" >
+  <div class="card" style="width: 100%;">
+    <div class="card-body" style="align-items: left;color: darkgray;">
+        On Boarding
+    </div>
+</div>
+<br>
+  <form>
+  <div class="card">
+    <div class="card-head">
+      <div class="row">
+        <div class="col-lg-4">
+
+        </div>
+        <div class="col-lg-4">
+          
+        </div>
+        <div class="col-lg-4">
+          <div class="text-center">
+            <button type="button" class="btn bg-gradient-dark w-25 my-4 mb-2">Sign up</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card-body p-3">
+      <tabset #staticTabs >
+        <tab heading="Personal Info"> 
+            <div class="container-fluid bg-white p-2"> 
+              <div class="row">
+                  <div class="col-sm-4 form-group">
+                      <label class="control-label">First Name</label>
+                      <input class="form-control" id="" formControlName="" placeholder="First Name" required="required" type="text" value="" ng-pattern="/^[a-zA-Z]+$/"/> <i class="icon-search"></i>  
+                  </div>
+                <div class="col-sm-4 form-group">
+                  <label class="control-label">Last Name</label>
+                  <input class="form-control" id="=" formControlName="" placeholder="Last Name" type="text" value="" ng-pattern="/^[a-zA-Z]+$/"/>
+                </div>
+                <div class="col-sm-4 form-group">
+                  <label class="control-label">Gender </label>
+                  <select class="form-control" id="" formControlName=""><option class="form-control" value="Male">Male</option>
+                  <option class="form-control" value="Female">Female</option>
+                  </select>
+                </div>
+              </div>
+              <div class="row">         
+                <div class="col-sm-4 form-group">
+                  <label class="control-label">D.O.B</label>
+                  <div class="inner-addon right-addon">
+                      <input class="form-control" data-val="true" data-val-date="The field AdminDOB must be a date." data-val-required="The AdminDOB field is required" id="" formControlName="" placeholder="mm/dd/yyyy" required="required" type="date" /> <i class="icon-search"></i>
+                  </div>
+              </div>
+              <div class="col-sm-4 form-group">
+                  <label class="control-label">Email </label>
+                  <input class="form-control" id="" formControlName="" placeholder="Email" type="text" value="" />         
+              </div>
+              <div class="col-sm-4 form-group">
+                <label class="control-label">Mobile Number</label>
+                <input class="form-control" id="" formControlName="" placeholder="1234567891" type="text" value="" minlength="10" maxlength="10"/>
+              </div>
+              </div>
+              <div class="row">         
+                <div class="col-sm-4 form-group">
+                  <label class="control-label">Nationality</label>
+                  <select class="form-control" id="" formControlName="">
+                    <option class="form-control" value="indian" selected>Indian</option>
+                    <option class="form-control" value="other">Other</option>
+                  </select>
+              </div>
+              <div class="col-sm-4 form-group">
+                  <label class="control-label">Religion</label>
+                  <input class="form-control" id="" formControlName="" placeholder="Religion" type="" value="" />         
+              </div>
+              <div class="col-sm-4">
+                <label class="control-label">Blood Group</label>
+                <select class="form-control" id="" formControlName="">
+                  <option class="form-control" selected disabled>Select Blood Group</option>
+                  <option class="form-control" value="other">Other</option>
+                </select>
+              </div>
+              </div>
+            </div>
+        </tab>
+        <tab heading="Old Address">
+            <div class="container-fluid bg-white p-2">
+              <div class="row">
+                <div class="col-sm-4 form-group">
+                  <label class="control-label">Location</label>
+                  <div class="inner-addon right-addon">
+                      <i class="glyphicon glyphicon-search"></i>
+                      <input class="form-control" id="" formControlName="" placeholder="Location" required="required" type="text" value="" /> <i class="icon-search"></i>
+                  </div>
+              </div>
+              <div class="col-sm-4 form-group">
+                  <label class="control-label">City</label>
+                  <input class="form-control" id="" formControlName="" placeholder="City" type="text" value="" />
+          
+              </div>
+              <div class="col-sm-4 form-group">
+                  <label class="control-label">State</label>
+                  <input class="form-control" id="" formControlName="" placeholder="State" type="text" value="" />  
+              </div>
+              </div>
+              <div class="row">
+                <div class="col-sm-4 form-group">
+                  <label class="control-label">Country</label>
+                  <input class="form-control" id="" formControlName="" placeholder="Country" type="text" value="" />
+              </div>
+              <div class="col-sm-4 form-group">
+                  <label class="control-label">Pincode </label>
+                  <input class="form-control" id="" formControlName="" placeholder="Pincode" type="number" value="" />          
+              </div>
+              <!-- <div class="col-sm-4 form-group ">
+                  <button class="btn btn-primary" (click)="selectTab()" type="button">Next</button> 
+              </div> -->
+              </div>
+        </div>
+        </tab>
+
+        <tab heading="New Address">
+          <div class="container-fluid bg-white p-2"> 
+              <div class="row">
+                  <div class="col-lg-4">
+                    <label class="control-label">Block Number</label>
+                    <select class="form-control" id="" formControlName="">
+                    <option class="form-control" selected disabled>Select Block Number</option>
+                    <option class="form-control" value=""></option>
+                    </select>
+                  </div>
+                  <div class="col-lg-4">
+                    <label class="control-label">House Number</label>
+                    <select class="form-control" id="" formControlName="">
+                    <option class="form-control" selected disabled>Select House No</option>
+                    <option class="form-control" value=""></option>
+                    </select>
+                  </div>
+
+                  <div class="col-lg-4">
+                    <!-- <div class="text-center">
+                      <button type="button" class="btn bg-gradient-faded-info w-50 my-4 mb-2">Get Details</button>
+                    </div> -->
+                  </div>
+              </div>
+          </div>
+        </tab>
+      </tabset>  
+    </div>
+  </div>
+  </form>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+  <!-- <div class="row">
+    <div class="col-lg-12">
+        <div class="card">
+            <div class="card-body p-3">
+            <form role="form text-left">
+              <div class="row">
+                <div class="col-lg-12">
+                  <label class="form-label"><h4>Personal Info :-</h4></label>
+                </div>
+                <div class="col-lg-4">
+                    <div class="mb-3">
+                        <label class="form-lable">First Name</label>
+                        <input type="text" class="form-control" placeholder="Name" aria-describedby="email-addon">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-lable">Eamil</label>
+                        <input type="email" class="form-control" placeholder="Email"  aria-describedby="email-addon">
+                    </div>           
+                </div>
+                <div class="col-lg-4">
+                  <div class="mb-3">
+                      <label class="form-lable">Last Name</label>
+                      <input type="text" class="form-control" placeholder="Name"  aria-describedby="email-addon">
+                  </div>
+                  <div class="mb-3">
+                      <label class="form-lable">Phone Number</label>
+                      <input type="email" class="form-control" placeholder="Phone Number"  aria-describedby="email-addon">
+                  </div>           
+              </div>
+              <div class="col-lg-4">
+                <div class="mb-3">
+                    <label class="form-lable">Middle Name</label>
+                    <input type="text" class="form-control" placeholder="Middle Name"  aria-describedby="email-addon">
+                </div>
+                <div class="mb-3">
+                    <label class="form-lable">Alternate Phone Number</label>
+                    <input type="email" class="form-control" placeholder="Phone Number"  aria-describedby="email-addon">
+                </div>           
+              </div>
+              <div class="col-lg-12">
+                <label class="form-label"><h4>Address :-</h4></label>
+              </div>
+              <div class="col-lg-4">
+                <div class="mb-3">
+                    <label class="form-lable">Hellow</label>
+                    <input type="text" class="form-control" placeholder="Middle Name"  aria-describedby="email-addon">
+                </div>
+                <div class="mb-3">
+                    <label class="form-lable">Alternate Phone Number</label>
+                    <input type="email" class="form-control" placeholder="Phone Number"  aria-describedby="email-addon">
+                </div>           
+              </div>  
+              <div class="col-lg-4">
+                <div class="mb-3">
+                    <label class="form-lable">Middle Name</label>
+                    <input type="text" class="form-control" placeholder="Middle Name"  aria-describedby="email-addon">
+                </div>
+                <div class="mb-3">
+                    <label class="form-lable">Alternate Phone Number</label>
+                    <input type="email" class="form-control" placeholder="Phone Number"  aria-describedby="email-addon">
+                </div>           
+              </div>  <div class="col-lg-4">
+                <div class="mb-3">
+                    <label class="form-lable">Middle Name</label>
+                    <input type="text" class="form-control" placeholder="Middle Name"  aria-describedby="email-addon">
+                </div>
+                <div class="mb-3">
+                    <label class="form-lable">Alternate Phone Number</label>
+                    <input type="email" class="form-control" placeholder="Phone Number"  aria-describedby="email-addon">
+                </div>           
+              </div>    
+            </div>
+            </form>
+            </div>
+          </div>
+    </div>
+</div> -->
