--- a/FrontEnd/projects/sfm/src/app/Admin/Components/owner-details/owner-details.component.html
+++ b/FrontEnd/projects/sfm/src/app/Admin/Components/owner-details/owner-details.component.html
@@ -1,1 +1,47 @@
-<p>owner-details works!</p>
+<div class="container-fluid py-4">
+    <div class="card" style="width: 100%;">
+        <div class="card-body" style="align-items: left;color: darkgray;">
+            User Details
+        </div>
+    </div>
+    <br>
+    <div class="card">
+        <div class="card-body">
+            <div class="ms-md-auto pe-md-3 d-flex align-items-center justify-content-end">
+                <div class="input-group" style="width: 300px;">
+                   
+                    <input type="text" class="form-control" placeholder="Type here...">
+                    <span class="input-group-text text-body"><i class="fas fa-search" aria-hidden="true"></i></span>
+                </div>
+            </div>          
+            <table class="table table-responsive">
+                <thead>
+                    <th>S.No</th>
+                    <th>Customer Name</th>
+                    <th>Email</th>
+                    <th>Phone Number</th>
+                    <th>Block Number</th>
+                    <th>House Number</th>                   
+                    <th>View</th>
+                    <th>Edit</th>
+                </thead>
+                <tbody style="text-align: center;">
+                    <tr>
+                        <td>1</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td><button class="btn btn-success">View</button></td>
+                        <td><button class="btn btn-success">Edit    </button></td>
+                    </tr>
+                    <tr>
+                        <td colspan="10" align="center">No data available in table</td>
+                    </tr>                    
+                </tbody>               
+            </table>
+        </div>
+    </div>
+    
+</div>
