--- a/FrontEnd/projects/sfm/src/app/Admin/Components/add-events/add-events.component.html
+++ b/FrontEnd/projects/sfm/src/app/Admin/Components/add-events/add-events.component.html
@@ -1,1 +1,11 @@
-<p>add-events works!</p>
+<div class="container-fluid py-4">
+    <div class="card" style="width: 100%;">
+        <div class="card-body" style="align-items: left;color: darkgray;">
+            Add New Event
+        </div>
+    </div>
+
+    <div class="card">
+        
+    </div>
+</div>
