--- a/FrontEnd/projects/sfm/src/app/Admin/Components/on-boarding/on-boarding.component.html
+++ b/FrontEnd/projects/sfm/src/app/Admin/Components/on-boarding/on-boarding.component.html
@@ -27,7 +27,7 @@
         <tab heading="Personal Info"> 
             <div class="container-fluid bg-white p-2"> 
               <div class="row">
-                  <div class="col-sm-4 form-group">
+                <div class="col-sm-4 form-group">
                       <label class="control-label">First Name</label>
                       <input class="form-control" id="" formControlName="" placeholder="First Name" required="required" type="text" value="" ng-pattern="/^[a-zA-Z]+$/"/> <i class="icon-search"></i>  
                   </div>
@@ -84,23 +84,27 @@
             <div class="container-fluid bg-white p-2">
               <div class="row">
                 <div class="col-sm-4 form-group">
-                  <label class="control-label">Location</label>
+                  <label class="control-label">DoorNo</label>
                   <div class="inner-addon right-addon">
                       <i class="glyphicon glyphicon-search"></i>
-                      <input class="form-control" id="" formControlName="" placeholder="Location" required="required" type="text" value="" /> <i class="icon-search"></i>
+                      <input class="form-control" id="" formControlName="" placeholder="DoorNO" required="required" type="text" value="" /> <i class="icon-search"></i>
                   </div>
-              </div>
+                </div>
               <div class="col-sm-4 form-group">
-                  <label class="control-label">City</label>
-                  <input class="form-control" id="" formControlName="" placeholder="City" type="text" value="" />
+                  <label class="control-label">Street Name</label>
+                  <input class="form-control" id="" formControlName="" placeholder="Street Name" type="text" value="" />
           
               </div>
-              <div class="col-sm-4 form-group">
-                  <label class="control-label">State</label>
-                  <input class="form-control" id="" formControlName="" placeholder="State" type="text" value="" />  
+              <div class="col-sm-4">
+                <label class="control-label">City</label>
+                <input class="form-control" id="" formControlName="" placeholder="City" type="text" value="" />
               </div>
               </div>
               <div class="row">
+                <div class="col-sm-4 form-group">
+                  <label class="control-label">State</label>
+                  <input class="form-control" id="" formControlName="" placeholder="State" type="text" value="" />  
+              </div>
                 <div class="col-sm-4 form-group">
                   <label class="control-label">Country</label>
                   <input class="form-control" id="" formControlName="" placeholder="Country" type="text" value="" />
