--- a/FrontEnd/projects/sfm/src/app/Admin/Components/owner-details/owner-details.component.html
+++ b/FrontEnd/projects/sfm/src/app/Admin/Components/owner-details/owner-details.component.html
@@ -22,19 +22,17 @@
                     <th>Phone Number</th>
                     <th>Block Number</th>
                     <th>House Number</th>                   
-                    <th>View</th>
-                    <th>Edit</th>
+                    <th>View</th>   
                 </thead>
                 <tbody style="text-align: center;">
-                    <tr>
-                        <td>1</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td><button class="btn btn-success">View</button></td>
-                        <td><button class="btn btn-success">Edit    </button></td>
+                    <tr *ngFor="let c of customer;let i=index">
+                        <td>{{i + 1}}</td>
+                        <td>{{c.firstname}} {{c.lastname}}</td>
+                        <td>{{c.email}}</td>
+                        <td>{{c.phonenumber}}</td>
+                        <td>{{c.houseid[0].blockNo}}</td>
+                        <td>{{c.houseid[0].houseNo}}</td>
+                        <td><button class="btn btn-success" (click)="view(c.customerId)" data-bs-toggle="modal" data-bs-target="#exampleModal">View</button></td>
                     </tr>
                     <tr>
                         <td colspan="10" align="center">No data available in table</td>
@@ -42,6 +40,90 @@
                 </tbody>               
             </table>
         </div>
-    </div>
+    </div>   
     
+     <td><button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal">View</button></td>
+
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+        <div class="modal-content">
+          <div class="modal-body">
+              <div class="card">
+                  <div class="card-body">
+                      <div class="row">
+                          <div class="col-lg-12" >
+                              <div class="row">
+                                  <div class="col-md-4">
+                                      <label class="form-lable">Customer Name</label>
+                                  </div>
+                                  <div class="col-md-4">
+                                      :
+                                  </div>
+                                  <div class="col-md-4">
+                                      <label class="form-lable" >{{cust.firstname +  " " + cust.lastname}}</label>
+                                  </div>
+                              </div>
+                              <div class="row">
+                                  <div class="col-md-4">
+                                      <label class="form-lable">House NO</label>
+                                  </div>
+                                  <div class="col-md-4">
+                                      :
+                                  </div>
+                                  <div class="col-md-4">
+                                      <label class="form-lable">{{cust.houseid[0].houseNo}}</label>
+                                  </div>
+                              </div>
+                              <div class="row">
+                                  <div class="col-md-4">
+                                      <label class="form-lable">Block No</label>
+                                  </div>
+                                  <div class="col-md-4">
+                                      :
+                                  </div>
+                                  <div class="col-md-4">
+                                      <label class="form-lable">{{cust.houseid[0].blockNo}}</label>
+                                  </div>
+                              </div>
+                              <div class="row">
+                                  <div class="col-md-4">
+                                      <label class="form-lable">Email</label>
+                                  </div>
+                                  <div class="col-md-4">
+                                      :
+                                  </div>
+                                  <div class="col-md-4">
+                                      <label class="form-lable">{{cust.email}}</label>
+                                  </div>
+                              </div>
+                              <div class="row">
+                                  <div class="col-md-4">
+                                      <label class="form-lable">Phone Number</label>
+                                  </div>
+                                  <div class="col-md-4">
+                                      :
+                                  </div>
+                                  <div class="col-md-4">
+                                      <label class="form-lable">{{cust.phonenumber}}</label>
+                                  </div>
+                              </div>
+
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <div class="modal-footer justify-content-center">
+            <div class="row">
+                <div class="col-md-4">
+                    <button class="btn btn-success" (click)="status(1)" data-bs-dismiss="modal">Save</button>
+                </div>
+                <div class="col-md-4">
+                    <button class="btn btn-danger"  data-bs-dismiss="modal">Cancel</button>
+                </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div> 
 </div>
