--- a/FrontEnd/projects/sfm/src/assets/css/soft-ui-dashboard.css
+++ b/FrontEnd/projects/sfm/src/assets/css/soft-ui-dashboard.css
@@ -6061,14 +6061,14 @@ fieldset:disabled .btn {
   left: 0;
   z-index: 1050;
   display: none;
-  width: 100%;
-  height: 100%;
+  width: auto;
+  height: auto;
   overflow: hidden;
   outline: 0;
 }
 
 .modal-dialog {
-  position: relative;
+  position: center;
   width: auto;
   margin: 0.5rem;
   pointer-events: none;
