--- a/FrontEnd/projects/sfm/src/app/Admin/Components/on-boarding/on-boarding.component.html
+++ b/FrontEnd/projects/sfm/src/app/Admin/Components/on-boarding/on-boarding.component.html
@@ -5,19 +5,17 @@
     </div>
 </div>
 <br>
-  <form>
+  <form [formGroup]="onBoarding" (ngSubmit)="onSubmit()">
   <div class="card">
     <div class="card-head">
       <div class="row">
         <div class="col-lg-4">
-
         </div>
-        <div class="col-lg-4">
-          
+        <div class="col-lg-4">         
         </div>
         <div class="col-lg-4">
           <div class="text-center">
-            <button type="button" class="btn bg-gradient-dark w-25 my-4 mb-2">Sign up</button>
+            <button type="submit" class="btn bg-gradient-dark w-25 my-4 mb-2" >Sign up</button>
           </div>
         </div>
       </div>
@@ -25,15 +23,15 @@
     <div class="card-body p-3">
       <tabset #staticTabs >
         <tab heading="Personal Info"> 
-            <div class="container-fluid bg-white p-2"> 
+            <div class="container-fluid bg-white p-2" > 
               <div class="row">
                 <div class="col-sm-4 form-group">
                       <label class="control-label">First Name</label>
-                      <input class="form-control" id="" formControlName="" placeholder="First Name" required="required" type="text" value="" ng-pattern="/^[a-zA-Z]+$/"/> <i class="icon-search"></i>  
+                      <input class="form-control" id="firstname" formControlName="firstname" placeholder="First Name" required="required" type="text" value="" ng-pattern="/^[a-zA-Z]+$/"/> <i class="icon-search"></i>  
                   </div>
                 <div class="col-sm-4 form-group">
                   <label class="control-label">Last Name</label>
-                  <input class="form-control" id="=" formControlName="" placeholder="Last Name" type="text" value="" ng-pattern="/^[a-zA-Z]+$/"/>
+                  <input class="form-control" id="lastname" formControlName="lastname" placeholder="Last Name" type="text" value="" ng-pattern="/^[a-zA-Z]+$/"/>
                 </div>
                 <div class="col-sm-4 form-group">
                   <label class="control-label">Gender </label>
@@ -46,33 +44,33 @@
                 <div class="col-sm-4 form-group">
                   <label class="control-label">D.O.B</label>
                   <div class="inner-addon right-addon">
-                      <input class="form-control" data-val="true" data-val-date="The field AdminDOB must be a date." data-val-required="The AdminDOB field is required" id="" formControlName="" placeholder="mm/dd/yyyy" required="required" type="date" /> <i class="icon-search"></i>
+                      <input class="form-control" data-val="true" data-val-date="The field AdminDOB must be a date." data-val-required="The AdminDOB field is required" id="dob" formControlName="dob" placeholder="mm/dd/yyyy" required="required" type="date" /> <i class="icon-search"></i>
                   </div>
               </div>
               <div class="col-sm-4 form-group">
                   <label class="control-label">Email </label>
-                  <input class="form-control" id="" formControlName="" placeholder="Email" type="text" value="" />         
+                  <input class="form-control" id="email" formControlName="email" placeholder="Email" type="text" value="" />         
               </div>
               <div class="col-sm-4 form-group">
                 <label class="control-label">Mobile Number</label>
-                <input class="form-control" id="" formControlName="" placeholder="1234567891" type="text" value="" minlength="10" maxlength="10"/>
+                <input class="form-control" id="phonenumber" formControlName="phonenumber" placeholder="1234567891" type="text" value="" minlength="10" maxlength="10"/>
               </div>
               </div>
               <div class="row">         
                 <div class="col-sm-4 form-group">
                   <label class="control-label">Nationality</label>
-                  <select class="form-control" id="" formControlName="">
+                  <select class="form-control" id="nationality" formControlName="nationality">
                     <option class="form-control" value="indian" selected>Indian</option>
                     <option class="form-control" value="other">Other</option>
                   </select>
               </div>
               <div class="col-sm-4 form-group">
                   <label class="control-label">Religion</label>
-                  <input class="form-control" id="" formControlName="" placeholder="Religion" type="" value="" />         
+                  <input class="form-control" id="religion" formControlName="religion" placeholder="Religion" type="" value="" />         
               </div>
               <div class="col-sm-4">
                 <label class="control-label">Blood Group</label>
-                <select class="form-control" id="" formControlName="">
+                <select class="form-control" id="bloodGroup" formControlName="bloodGroup">
                   <option class="form-control" selected disabled>Select Blood Group</option>
                   <option class="form-control" value="other">Other</option>
                 </select>
@@ -81,37 +79,37 @@
             </div>
         </tab>
         <tab heading="Old Address">
-            <div class="container-fluid bg-white p-2">
+            <div class="container-fluid bg-white p-2" formGroupName="oldAddress">
               <div class="row">
                 <div class="col-sm-4 form-group">
                   <label class="control-label">DoorNo</label>
                   <div class="inner-addon right-addon">
                       <i class="glyphicon glyphicon-search"></i>
-                      <input class="form-control" id="" formControlName="" placeholder="DoorNO" required="required" type="text" value="" /> <i class="icon-search"></i>
+                      <input class="form-control" id="doorno" formControlName="doorno" placeholder="DoorNO" required="required" type="text" value="" /> <i class="icon-search"></i>
                   </div>
                 </div>
               <div class="col-sm-4 form-group">
                   <label class="control-label">Street Name</label>
-                  <input class="form-control" id="" formControlName="" placeholder="Street Name" type="text" value="" />
+                  <input class="form-control" id="streetName" formControlName="streetName" placeholder="Street Name" type="text" value="" />
           
               </div>
               <div class="col-sm-4">
                 <label class="control-label">City</label>
-                <input class="form-control" id="" formControlName="" placeholder="City" type="text" value="" />
+                <input class="form-control" id="city" formControlName="city" placeholder="City" type="text" value="" />
               </div>
               </div>
               <div class="row">
                 <div class="col-sm-4 form-group">
                   <label class="control-label">State</label>
-                  <input class="form-control" id="" formControlName="" placeholder="State" type="text" value="" />  
+                  <input class="form-control" id="state" formControlName="state" placeholder="State" type="text" value="" />  
               </div>
                 <div class="col-sm-4 form-group">
                   <label class="control-label">Country</label>
-                  <input class="form-control" id="" formControlName="" placeholder="Country" type="text" value="" />
+                  <input class="form-control" id="country" formControlName="country" placeholder="Country" type="text" value="" />
               </div>
               <div class="col-sm-4 form-group">
                   <label class="control-label">Pincode </label>
-                  <input class="form-control" id="" formControlName="" placeholder="Pincode" type="number" value="" />          
+                  <input class="form-control" id="pincode" formControlName="pincode" placeholder="Pincode" type="number" value="" />          
               </div>
               <!-- <div class="col-sm-4 form-group ">
                   <button class="btn btn-primary" (click)="selectTab()" type="button">Next</button> 
@@ -121,20 +119,20 @@
         </tab>
 
         <tab heading="New Address">
-          <div class="container-fluid bg-white p-2"> 
+          <div class="container-fluid bg-white p-2" formGroupName="houseid"> 
               <div class="row">
                   <div class="col-lg-4">
                     <label class="control-label">Block Number</label>
-                    <select class="form-control" id="" formControlName="">
+                    <select class="form-control" id="blockNo" formControlName="blockNo">
                     <option class="form-control" selected disabled>Select Block Number</option>
-                    <option class="form-control" value=""></option>
+                    <option class="form-control" value="asdfsadf">sdfsadfafd</option>
                     </select>
                   </div>
                   <div class="col-lg-4">
                     <label class="control-label">House Number</label>
-                    <select class="form-control" id="" formControlName="">
+                    <select class="form-control" id="houseNo" formControlName="houseNo">
                     <option class="form-control" selected disabled>Select House No</option>
-                    <option class="form-control" value=""></option>
+                    <option class="form-control" value="sdfsadf">adfsdf</option>
                     </select>
                   </div>
 
