--- a/FrontEnd/projects/sfm/src/app/Admin/Components/owner-details/owner-details.component.html
+++ b/FrontEnd/projects/sfm/src/app/Admin/Components/owner-details/owner-details.component.html
@@ -45,7 +45,7 @@
      <td><button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal">View</button></td>
 
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+      <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg">
         <div class="modal-content">
           <div class="modal-body">
               <div class="card">
