--- a/FrontEnd/projects/sfm/src/app/Admin/Components/payment-reports/payment-reports.component.html
+++ b/FrontEnd/projects/sfm/src/app/Admin/Components/payment-reports/payment-reports.component.html
@@ -1,1 +1,36 @@
-<p>payment-reports works!</p>
+<div class="container-fluid py-2">
+    <div class="card" style="width: 100%;">
+        <div class="card-body" style="align-items: left;color: darkgray;">
+            Payment Report
+        </div>
+    </div>
+    <br>
+
+    <div class="card">
+        <div class="card-body">
+            <table class="table table-borderless">
+                <thead>
+                    <th>S.No</th>
+                    <th>Transaction Id</th>
+                    <th>Customer Name</th>
+                    <th>Date</th>
+                    <th>Time</th>
+                    <th>Amount</th>
+                    <th>View</th>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td><button class="btn btn-primary">view</button></td>
+                        
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
